--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     body {
         margin: 0;
-        background: black;
+        background: white;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -66,4 +66,5 @@
 </div>
 
 </body>
+
 </html>
