--- a/index.html
+++ b/index.html
@@ -15,28 +15,34 @@
     }
 
     h1 {
-        color: white;
+        color: black;
         text-align: center;
+        margin-bottom: 20px;
     }
 
     .video-container {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
         gap: 20px;
-        align-items: center;
         width: 100%;
-        max-width: 900px;
+        max-width: 1200px;
     }
 
     iframe {
         width: 100%;
-        height: 500px;
+        height: 300px;
         border: none;
+    }
+
+    @media (min-width: 900px) {
+        iframe {
+            height: 400px;
+        }
     }
 
     @media (max-width: 600px) {
         iframe {
-            height: 300px;
+            height: 250px;
         }
     }
 </style>
@@ -63,8 +69,19 @@
         src="https://www.youtube.com/embed/2ewHKFf8bso?rel=0&modestbranding=1&controls=1" 
         allowfullscreen>
     </iframe>
+
+    <!-- Video 4 -->
+    <iframe 
+        src="https://www.youtube.com/embed/rgvCJCK1Ic4?rel=0&modestbranding=1&controls=1" 
+        allowfullscreen>
+    </iframe>
+
+    <!-- Video 5 -->
+    <iframe 
+        src="https://www.youtube.com/embed/cM3iKJ2jrwA?rel=0&modestbranding=1&controls=1" 
+        allowfullscreen>
+    </iframe>
 </div>
 
 </body>
-
 </html>
