--- a/index.html
+++ b/index.html
@@ -1,56 +1,3 @@
-<!DOCTYPE html>
-<html lang="da">
-<head>
-<meta charset="UTF-8">
-<title>Mine Videoer</title>
-<style>
-    body {
-        margin: 0;
-        background: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-family: Arial, sans-serif;
-        padding: 20px;
-    }
-
-    h1 {
-        color: black;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .video-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-        gap: 20px;
-        width: 100%;
-        max-width: 1200px;
-    }
-
-    iframe {
-        width: 100%;
-        height: 300px;
-        border: none;
-    }
-
-    @media (min-width: 900px) {
-        iframe {
-            height: 400px;
-        }
-    }
-
-    @media (max-width: 600px) {
-        iframe {
-            height: 250px;
-        }
-    }
-</style>
-</head>
-<body>
-
-<h1>Mine Videoer</h1>
-
 <div class="video-container">
     <!-- Video 1 -->
     <iframe 
@@ -81,7 +28,10 @@
         src="https://www.youtube.com/embed/cM3iKJ2jrwA?rel=0&modestbranding=1&controls=1" 
         allowfullscreen>
     </iframe>
-</div>
 
-</body>
-</html>
+    <!-- Video 6 -->
+    <iframe 
+        src="https://www.youtube.com/embed/2Td-ChKTO9w?rel=0&modestbranding=1&controls=1" 
+        allowfullscreen>
+    </iframe>
+</div>
