--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     .video-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr); /* 3 kolonner på desktop */
+        grid-template-columns: repeat(3, 1fr);
         gap: 20px;
         width: 100%;
         max-width: 1200px;
@@ -42,13 +42,13 @@
 
     @media (max-width: 900px) {
         .video-container {
-            grid-template-columns: repeat(2, 1fr); /* 2 kolonner på tablet */
+            grid-template-columns: repeat(2, 1fr);
         }
     }
 
     @media (max-width: 600px) {
         .video-container {
-            grid-template-columns: 1fr; /* 1 kolonne på mobil */
+            grid-template-columns: 1fr;
         }
         iframe {
             height: 250px;
@@ -61,41 +61,28 @@
 <h1>Mine Videoer</h1>
 
 <div class="video-container">
+
     <!-- Video 1 -->
-    <iframe 
-        src="https://www.youtube.com/embed/odAf_pwxgLo?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/odAf_pwxgLo?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
 
     <!-- Video 2 -->
-    <iframe 
-        src="https://www.youtube.com/embed/6F7GTx6DcgM?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/6F7GTx6DcgM?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
 
     <!-- Video 3 -->
-    <iframe 
-        src="https://www.youtube.com/embed/2ewHKFf8bso?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/2ewHKFf8bso?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
 
     <!-- Video 4 -->
-    <iframe 
-        src="https://www.youtube.com/embed/rgvCJCK1Ic4?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/rgvCJCK1Ic4?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
 
     <!-- Video 5 -->
-    <iframe 
-        src="https://www.youtube.com/embed/cM3iKJ2jrwA?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/cM3iKJ2jrwA?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
 
     <!-- Video 6 -->
-    <iframe 
-        src="https://www.youtube.com/embed/2Td-ChKTO9w?rel=0&modestbranding=1&controls=1" 
-        allowfullscreen>
-    </iframe>
+    <iframe src="https://www.youtube.com/embed/2Td-ChKTO9w?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
+
+    <!-- Video 7 -->
+    <iframe src="https://www.youtube.com/embed/SgKZC0o3UTI?rel=0&modestbranding=1&controls=1" allowfullscreen></iframe>
+
 </div>
 
 </body>
